tests/kyverno-policies/add-statefulset-service-account/paas-statefulset-patched.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset
  namespace: paas
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
          osc.edu/home: project/test
          osc.edu/service-account-uid: "1000"
          osc.edu/service-account-gid: "1001"
        labels:
          osc.edu/service-account: "test-user"
      spec:
        storageClassName: local-scratch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset-ess
  namespace: paas
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
          osc.edu/home: project/test
          osc.edu/service-account-uid: "1000"
          osc.edu/service-account-gid: "1001"
        labels:
          osc.edu/service-account: "test-user"
      spec:
        storageClassName: local-ess
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset-home
  namespace: paas
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        annotations:
          osc.edu/home: project/test
          osc.edu/service-account-uid: "1000"
          osc.edu/service-account-gid: "1001"
        labels:
          osc.edu/service-account: "test-user"
      spec:
        storageClassName: local-home
