tests/kyverno-policies/add-statefulset-service-account/resources.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset
  namespace: webservice
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-scratch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-ess
  namespace: webservice
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-ess
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-home
  namespace: webservice
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
      spec:
        storageClassName: local-home
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-namespace
  namespace: webservice2
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-ess
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-without-service-account
  namespace: webservice
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-scratch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset
  namespace: paas
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
          osc.edu/home: foo
      spec:
        storageClassName: local-scratch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset-ess
  namespace: paas
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
      spec:
        storageClassName: local-ess
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paas-statefulset-home
  namespace: paas
spec:
  volumeClaimTemplates:
    - metadata:
        name: paas-statefulset-pvc
      spec:
        storageClassName: local-home
