tests/kyverno-policies/add-statefulset-service-account/webservice-statefulset-patched.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset
  namespace: webservice
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
          osc.edu/home: project/test
          osc.edu/service-account-uid: "1000"
          osc.edu/service-account-gid: "1001"
        labels:
          osc.edu/service-account: "test-user"
      spec:
        storageClassName: local-scratch
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-ess
  namespace: webservice
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        annotations:
          osc.edu/fileset: "test-fileset"
          osc.edu/home: project/test
          osc.edu/service-account-uid: "1000"
          osc.edu/service-account-gid: "1001"
        labels:
          osc.edu/service-account: "test-user"
      spec:
        storageClassName: local-ess
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-home
  namespace: webservice
  labels:
    osc.edu/service-account: "test-user"
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        annotations:
          osc.edu/home: project/test
          osc.edu/service-account-uid: "1000"
          osc.edu/service-account-gid: "1001"
        labels:
          osc.edu/service-account: "test-user"
      spec:
        storageClassName: local-home
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webservice-statefulset-namespace
  namespace: webservice2
spec:
  volumeClaimTemplates:
    - metadata:
        name: webservice-statefulset-pvc
        annotations:
          osc.edu/home: project/test
          osc.edu/service-account-uid: "1000"
          osc.edu/service-account-gid: "1001"
          osc.edu/fileset: "test-fileset"
        labels:
          osc.edu/service-account: test-user
      spec:
        storageClassName: local-ess
