tests/kyverno-policies/add-statefulset-service-account/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: add-statefulset-service-account
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: add-statefulset-service-account
    rule: statefulset-add-service-account-webservice
    resources:
      - webservice-statefulset
      - webservice-statefulset-ess
      - webservice-statefulset-home
      - webservice-statefulset-namespace
    patchedResources: webservice-statefulset-patched.yaml
    kind: StatefulSet
    result: pass
  - policy: add-statefulset-service-account
    rule: statefulset-add-service-account-webservice
    resources:
      - webservice-statefulset-without-service-account
      - paas-statefulset
    kind: StatefulSet
    result: skip
  - policy: add-statefulset-service-account
    rule: statefulset-add-service-account-paas
    resources:
      - paas-statefulset
      - paas-statefulset-ess
      - paas-statefulset-home
    patchedResources: paas-statefulset-patched.yaml
    kind: StatefulSet
    result: pass
  - policy: add-statefulset-service-account
    rule: statefulset-add-service-account-paas
    resources:
      - webservice-statefulset
      - webservice-statefulset-ess
      - webservice-statefulset-home
      - webservice-statefulset-without-service-account
    kind: StatefulSet
    result: skip
