tests/kyverno-policies/add-statefulset-service-account/variables.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
policies:
  - name: add-statefulset-service-account
    rules:
      - name: statefulset-add-service-account-webservice
        values:
          uidMap.data.user-test-user: '1000'
          gidMap.data.user-test-user: '1001'
          homeMap.data.user-test-user: '/users/project/test'
      - name: statefulset-add-service-account-paas
        values:
          uidMap.data.user-test-user: '1000'
          gidMap.data.user-test-user: '1001'
          homeMap.data.user-test-user: '/users/project/test'
    resources:
      - name: webservice-statefulset-namespace
        values:
          namespaceServiceAccount: test-user
      - name: webservice-statefulset-without-service-account
        values:
          namespaceServiceAccount: ''
      - name: paas-statefulset
        values:
          serviceAccount: test-user
      - name: paas-statefulset-ess
        values:
          serviceAccount: test-user
      - name: paas-statefulset-home
        values:
          serviceAccount: test-user
namespaceSelector:
  - name: webservice
    labels:
      osc.edu/role: webservice
  - name: webservice2
    labels:
      osc.edu/role: webservice
      osc.edu/service-account: test-user
  - name: paas
    labels:
      osc.edu/role: paas
      osc.edu/service-account: test-user
